# cpp-oss-template-follow

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CompileOptions.cmake
scripts/: travis_build.sh  travis_build_codecov.sh
src/: CMakeLists.txt  cotf.cpp  cotf.h
tests/: CMakeLists.txt  cotf-test.cpp
